--- a/Untukmu/index.html
+++ b/Untukmu/index.html
@@ -19,9 +19,14 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
+      ucapan = `Hai kamu 
+      Salam kenal
+      save ya 
+      Nomor aku 
+      "Izzan" 
+      Thank youu😘`;
       musik = ``;
-      nomorWhatsapp = ``;
+      nomorWhatsapp = `6285838776841`;
       idTelegram = ``;
 
       DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
