--- a/Untukmu/index.html
+++ b/Untukmu/index.html
@@ -20,10 +20,11 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
 
     <script>
       ucapan = `Hai kamu 
+      lagi ngapain? 
       Salam kenal
-      save ya 
-      Nomor aku 
-      "Izzan" 
+      save ya nomor aku
+      "Izzan"
+      hehe
       Thank youu😘`;
       musik = ``;
       nomorWhatsapp = `6285838776841`;
